Fixed credits in light dark mode.

--- a/css/grid/grid.css
+++ b/css/grid/grid.css
@@ -785,6 +785,23 @@ th.hcg-column-sortable > .hcg-column-sortable-icon {
 
 /* Credits */
 
+.hcg-credits {
+    display: block;
+    width: 114px;
+    height: 20px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-image: url("https://assets.highcharts.com/grid/logo_light.png");
+}
+
+.highcharts-light .hcg-credits {
+    background-image: url("https://assets.highcharts.com/grid/logo_light.png");
+}
+
+.highcharts-dark .hcg-credits {
+    background-image: url("https://assets.highcharts.com/grid/logo_dark.png");
+}
+
 .hcg-credits-container.hcg-credits-pro {
     text-align: var(--ig-credits-text-align);
     padding: var(--ig-credits-padding);
@@ -929,6 +946,10 @@ th.hcg-column-sortable > .hcg-column-sortable-icon {
     .hcg-theme-default {
         --hcg-color: var(--highcharts-neutral-color-100, #ffffff);
         --hcg-background: var(--highcharts-background-color, #141414);
+    }
+
+    .hcg-credits {
+        background-image: url("https://assets.highcharts.com/grid/logo_dark.png");
     }
 }
 
